--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "enertech"
 version = "0.1.0"
 requires-python = ">=3.8"
 dependencies = [
-    "psycopg2-binary>=2.9.0",
+    "psycopg2",
 ]
 
 [tool.setuptools]
